turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:14: error: type mismatch;
 found   : java.awt.Color
 required: Int
	var (a:Int,b:Int,c:Int) = rule(state)(x)
                                              ^Turmite:17: error: not found: value stace
		case 2 => setCouleurBrosse(colors(a)); baisseBrosse();leveBrosse(); gauche(); avance(); stace = c
                                                                                                        ^